ver. 1.4.0 1. Fixed XSS bugs 2. Add hovering description 3. Available to use markdown in description and title 4. Available to customize all the regex

--- a/src/try.html
+++ b/src/try.html
@@ -1,1 +1,185 @@
-<table id="calendar_6_2016" class="markdown-it-calendar" border="2"><tbody><tr><td colspan="7" class="calendar_title">JUNE 2016</td></tr><tr><td class="week">SUN</td><td class="week">MON</td><td class="week">TUE</td><td class="week">WED</td><td class="week">THUS</td><td class="week">FRI</td><td class="week">SAT</td></tr><tr><td class="day" id="6_2016_grid_1" style="border: 0px;"><p id="6_2016_dates_1" class="dates"></p><p id="6_2016_tags_1" class="tags"></p></td><td class="day" id="6_2016_grid_2" style="border: 0px;"><p id="6_2016_dates_2" class="dates"></p><p id="6_2016_tags_2" class="tags"></p></td><td class="day" id="6_2016_grid_3" style="border: 0px;"><p id="6_2016_dates_3" class="dates"></p><p id="6_2016_tags_3" class="tags"></p></td><td class="day" id="6_2016_grid_4"><p id="6_2016_dates_4" class="dates">1</p><p id="6_2016_tags_4" class="tags"></p></td><td class="day" id="6_2016_grid_5"><p id="6_2016_dates_5" class="dates">2</p><p id="6_2016_tags_5" class="tags"></p></td><td class="day" id="6_2016_grid_6"><p id="6_2016_dates_6" class="dates">3</p><p id="6_2016_tags_6" class="tags"></p></td><td class="day" id="6_2016_grid_7"><p id="6_2016_dates_7" class="dates">4</p><p id="6_2016_tags_7" class="tags">tag1<br>tag2<br>tag3<br>tag4<br>tag5<br>tag6<br></p></td></tr><tr><td colspan="7" class="calendar_desciption" id="6_2016_des_1"></td></tr><tr><td colspan="7" class="calendar_desciption" id="6_2016_des_2"></td></tr><tr><td colspan="7" class="calendar_desciption" id="6_2016_des_3"></td></tr><tr><td colspan="7" class="calendar_desciption" id="6_2016_des_4"></td></tr><tr><td colspan="7" class="calendar_desciption" id="6_2016_des_5"></td></tr><tr><td colspan="7" class="calendar_desciption" id="6_2016_des_6"></td></tr><tr><td colspan="7" class="calendar_desciption" id="6_2016_des_7">des1<br>des2<br>des3<br>des4<br>des5<br>des6<br></td></tr><tr><td class="day" id="6_2016_grid_8"><p id="6_2016_dates_8" class="dates">5</p><p id="6_2016_tags_8" class="tags"></p></td><td class="day" id="6_2016_grid_9"><p id="6_2016_dates_9" class="dates">6</p><p id="6_2016_tags_9" class="tags"></p></td><td class="day" id="6_2016_grid_10"><p id="6_2016_dates_10" class="dates">7</p><p id="6_2016_tags_10" class="tags"></p></td><td class="day" id="6_2016_grid_11"><p id="6_2016_dates_11" class="dates">8</p><p id="6_2016_tags_11" class="tags"></p></td><td class="day" id="6_2016_grid_12"><p id="6_2016_dates_12" class="dates">9</p><p id="6_2016_tags_12" class="tags"></p></td><td class="day" id="6_2016_grid_13"><p id="6_2016_dates_13" class="dates">10</p><p id="6_2016_tags_13" class="tags"></p></td><td class="day" id="6_2016_grid_14"><p id="6_2016_dates_14" class="dates">11</p><p id="6_2016_tags_14" class="tags"></p></td></tr><tr><td colspan="7" class="calendar_desciption" id="6_2016_des_8"></td></tr><tr><td colspan="7" class="calendar_desciption" id="6_2016_des_9"></td></tr><tr><td colspan="7" class="calendar_desciption" id="6_2016_des_10"></td></tr><tr><td colspan="7" class="calendar_desciption" id="6_2016_des_11"></td></tr><tr><td colspan="7" class="calendar_desciption" id="6_2016_des_12"></td></tr><tr><td colspan="7" class="calendar_desciption" id="6_2016_des_13"></td></tr><tr><td colspan="7" class="calendar_desciption" id="6_2016_des_14"></td></tr><tr><td class="day" id="6_2016_grid_15"><p id="6_2016_dates_15" class="dates">12</p><p id="6_2016_tags_15" class="tags"></p></td><td class="day" id="6_2016_grid_16"><p id="6_2016_dates_16" class="dates">13</p><p id="6_2016_tags_16" class="tags"></p></td><td class="day" id="6_2016_grid_17"><p id="6_2016_dates_17" class="dates">14</p><p id="6_2016_tags_17" class="tags"></p></td><td class="day" id="6_2016_grid_18"><p id="6_2016_dates_18" class="dates">15</p><p id="6_2016_tags_18" class="tags"></p></td><td class="day" id="6_2016_grid_19"><p id="6_2016_dates_19" class="dates">16</p><p id="6_2016_tags_19" class="tags"></p></td><td class="day" id="6_2016_grid_20"><p id="6_2016_dates_20" class="dates">17</p><p id="6_2016_tags_20" class="tags"></p></td><td class="day" id="6_2016_grid_21"><p id="6_2016_dates_21" class="dates">18</p><p id="6_2016_tags_21" class="tags"></p></td></tr><tr><td colspan="7" class="calendar_desciption" id="6_2016_des_15"></td></tr><tr><td colspan="7" class="calendar_desciption" id="6_2016_des_16"></td></tr><tr><td colspan="7" class="calendar_desciption" id="6_2016_des_17"></td></tr><tr><td colspan="7" class="calendar_desciption" id="6_2016_des_18"></td></tr><tr><td colspan="7" class="calendar_desciption" id="6_2016_des_19"></td></tr><tr><td colspan="7" class="calendar_desciption" id="6_2016_des_20"></td></tr><tr><td colspan="7" class="calendar_desciption" id="6_2016_des_21"></td></tr><tr><td class="day" id="6_2016_grid_22"><p id="6_2016_dates_22" class="dates">19</p><p id="6_2016_tags_22" class="tags"></p></td><td class="day" id="6_2016_grid_23"><p id="6_2016_dates_23" class="dates">20</p><p id="6_2016_tags_23" class="tags">tag7<br></p></td><td class="day" id="6_2016_grid_24"><p id="6_2016_dates_24" class="dates">21</p><p id="6_2016_tags_24" class="tags"></p></td><td class="day" id="6_2016_grid_25"><p id="6_2016_dates_25" class="dates">22</p><p id="6_2016_tags_25" class="tags"></p></td><td class="day" id="6_2016_grid_26"><p id="6_2016_dates_26" class="dates">23</p><p id="6_2016_tags_26" class="tags"></p></td><td class="day" id="6_2016_grid_27"><p id="6_2016_dates_27" class="dates">24</p><p id="6_2016_tags_27" class="tags"></p></td><td class="day" id="6_2016_grid_28"><p id="6_2016_dates_28" class="dates">25</p><p id="6_2016_tags_28" class="tags"></p></td></tr><tr><td colspan="7" class="calendar_desciption" id="6_2016_des_22"></td></tr><tr><td colspan="7" class="calendar_desciption" id="6_2016_des_23">des7<br></td></tr><tr><td colspan="7" class="calendar_desciption" id="6_2016_des_24"></td></tr><tr><td colspan="7" class="calendar_desciption" id="6_2016_des_25"></td></tr><tr><td colspan="7" class="calendar_desciption" id="6_2016_des_26"></td></tr><tr><td colspan="7" class="calendar_desciption" id="6_2016_des_27"></td></tr><tr><td colspan="7" class="calendar_desciption" id="6_2016_des_28"></td></tr><tr><td class="day" id="6_2016_grid_29"><p id="6_2016_dates_29" class="dates">26</p><p id="6_2016_tags_29" class="tags"></p></td><td class="day" id="6_2016_grid_30"><p id="6_2016_dates_30" class="dates">27</p><p id="6_2016_tags_30" class="tags"></p></td><td class="day" id="6_2016_grid_31"><p id="6_2016_dates_31" class="dates">28</p><p id="6_2016_tags_31" class="tags"></p></td><td class="day" id="6_2016_grid_32"><p id="6_2016_dates_32" class="dates">29</p><p id="6_2016_tags_32" class="tags"></p></td><td class="day" id="6_2016_grid_33"><p id="6_2016_dates_33" class="dates">30</p><p id="6_2016_tags_33" class="tags"></p></td><td class="day" id="6_2016_grid_34" style="border: 0px;"><p id="6_2016_dates_34" class="dates"></p><p id="6_2016_tags_34" class="tags"></p></td></tr><tr><td colspan="7" class="calendar_desciption" id="6_2016_des_29"></td></tr><tr><td colspan="7" class="calendar_desciption" id="6_2016_des_30"></td></tr><tr><td colspan="7" class="calendar_desciption" id="6_2016_des_31"></td></tr><tr><td colspan="7" class="calendar_desciption" id="6_2016_des_32"></td></tr><tr><td colspan="7" class="calendar_desciption" id="6_2016_des_33"></td></tr><tr></tr><tr></tr><tr></tr><tr></tr><tr></tr><tr></tr><tr></tr><tr></tr><tr></tr></tbody></table>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=2">
+  <link href="../calendar.css" type="text/css" rel="stylesheet">
+</head>
+<div class="markdown-it-calendar">
+  <table class="calendar table table-responsive container-fluid" year="2016" month="6">
+    <tbody>
+      <tr>
+        <th colspan="7" class="calendar-title">June<span class="calendar-title-year"> 2016</span></th>
+      </tr>
+      <tr>
+        <td class="calendar-week">Sun</td>
+        <td class="calendar-week">Mon</td>
+        <td class="calendar-week">Tue</td>
+        <td class="calendar-week">Wed</td>
+        <td class="calendar-week">Thu</td>
+        <td class="calendar-week">Fri</td>
+        <td class="calendar-week">Sat</td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td class="calendar-day">
+          <p class="calendar-date">1</p>
+        </td>
+        <td class="calendar-day">
+          <p class="calendar-date">2</p>
+        </td>
+        <td class="calendar-day">
+          <p class="calendar-date">3</p>
+          <a href="#description-2016-6-3">
+            <p class="calendar-content-title">小畢典ddddddddddd</p>
+          </a>
+          <div id="contentTrigger-2016-6-3" class="calendar-content">
+            <p class="calendar-tag">規劃1</p>
+            <p class="calendar-tag">規劃2</p>
+          </div>
+          <div id="description-2016-6-3" class="calendar-description">
+            <p class="calendar-des-title">小畢典ddddddddddd</p>
+            <p><span class="calendar-des-tag">規劃1 :  </span> 1234</p>
+            <p><span class="calendar-des-tag">規劃2 :  </span> dddd</p>
+            <p class="calendar-des-date">2016.6.3</p><a href="#contentTrigger-2016-6-3" class="des-close">×</a></div>
+        </td>
+
+        <!-- LOOK -->
+        <td class="calendar-day">
+          <p class="calendar-date">4</p>
+          <a href="#description-2016-6-4">
+            <p class="calendar-content-title">Day1</p>
+          </a>
+          <div id="contentTrigger-2016-6-4" class="calendar-content">
+            <div class="calendar-tag">
+              <p>最狂夜ssssssssssssssss店</p>
+              <p class="calendar-tag-hover"><span>3wwwwwwwwwwwwwww3 :  </span> 3333</p>
+            </div>
+            <div class="calendar-tag">
+              <p>最狂夜ssssssssssssssss店</p>
+              <p class="calendar-tag-hover"><span>3wwwwwwwwwwwwwww3 :  </span> 3333</p>
+            </div>
+          </div>
+          <div id="description-2016-6-4" class="calendar-description">
+            <p class="calendar-des-title">Day1</p>
+            <p><span class="calendar-des-tag">最狂夜ssssssssssssssss店 :  </span> kk</p>
+            <p><span class="calendar-des-tag">3wwwwwwwwwwwwwww3 :  </span> 3333</p>
+            <p class="calendar-des-date">2016.6.4</p><a href="#contentTrigger-2016-6-4" class="des-close">×</a></div>
+        </td>
+        <!-- DONE -->
+      </tr>
+      <tr>
+        <td class="calendar-day">
+          <p class="calendar-date">5</p>
+        </td>
+        <td class="calendar-day">
+          <p class="calendar-date">6</p>
+        </td>
+        <td class="calendar-day">
+          <p class="calendar-date">7</p>
+        </td>
+        <td class="calendar-day">
+          <p class="calendar-date">8</p>
+        </td>
+        <td class="calendar-day">
+          <p class="calendar-date">9</p>
+        </td>
+        <td class="calendar-day">
+          <p class="calendar-date">10</p>
+          <a href="#description-2016-6-10">
+            <p class="calendar-content-title">ppp</p>
+          </a>
+          <div id="contentTrigger-2016-6-10" class="calendar-content">
+            <p class="calendar-tag"><a href="222">www</a></p>
+          </div>
+          <div id="description-2016-6-10" class="calendar-description">
+            <p class="calendar-des-title">ppp</p>
+            <p><span class="calendar-des-tag"><a href="222">www</a> :  </span> ww
+              <br>
+            </p>
+            <p class="calendar-des-date">2016.6.10</p><a href="#contentTrigger-2016-6-10" class="des-close">×</a></div>
+        </td>
+        <td class="calendar-day">
+          <p class="calendar-date">11</p>
+        </td>
+      </tr>
+      <tr>
+        <td class="calendar-day">
+          <p class="calendar-date">12</p>
+        </td>
+        <td class="calendar-day">
+          <p class="calendar-date">13</p>
+        </td>
+        <td class="calendar-day">
+          <p class="calendar-date">14</p>
+        </td>
+        <td class="calendar-day">
+          <p class="calendar-date">15</p>
+        </td>
+        <td class="calendar-day">
+          <p class="calendar-date">16</p>
+        </td>
+        <td class="calendar-day">
+          <p class="calendar-date">17</p>
+        </td>
+        <td class="calendar-day">
+          <p class="calendar-date">18</p>
+        </td>
+      </tr>
+      <tr>
+        <td class="calendar-day">
+          <p class="calendar-date">19</p>
+        </td>
+        <td class="calendar-day">
+          <p class="calendar-date">20</p>
+        </td>
+        <td class="calendar-day">
+          <p class="calendar-date">21</p>
+        </td>
+        <td class="calendar-day">
+          <p class="calendar-date">22</p>
+          <a href="#description-2016-6-22">
+            <p class="calendar-content-title">Day1</p>
+          </a>
+          <div id="contentTrigger-2016-6-22" class="calendar-content">
+            <p class="calendar-tag">最狂夜ssssssssssssssss店</p>
+            <p class="calendar-tag">3wwwwwwwwwwwwwww3</p>
+          </div>
+          <div id="description-2016-6-22" class="calendar-description">
+            <p class="calendar-des-title">Day1</p>
+            <p><span class="calendar-des-tag">最狂夜ssssssssssssssss店 :  </span> kk</p>
+            <p><span class="calendar-des-tag">3wwwwwwwwwwwwwww3 :  </span> 3333</p>
+            <p class="calendar-des-date">2016.6.22</p><a href="#contentTrigger-2016-6-22" class="des-close">×</a></div>
+        </td>
+        <td class="calendar-day">
+          <p class="calendar-date">23</p>
+        </td>
+        <td class="calendar-day">
+          <p class="calendar-date">24</p>
+        </td>
+        <td class="calendar-day">
+          <p class="calendar-date">25</p>
+        </td>
+      </tr>
+      <tr>
+        <td class="calendar-day">
+          <p class="calendar-date">26</p>
+        </td>
+        <td class="calendar-day">
+          <p class="calendar-date">27</p>
+        </td>
+        <td class="calendar-day">
+          <p class="calendar-date">28</p>
+        </td>
+        <td class="calendar-day">
+          <p class="calendar-date">29</p>
+        </td>
+        <td class="calendar-day">
+          <p class="calendar-date">30</p>
+        </td>
+        <td></td>
+        <td></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
